--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -64,7 +64,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Product name:"
+            android:text="Supplier name:"
             android:textAppearance="?android:textAppearanceMedium"/>
 
         <EditText
