Prevented user from entering letters in number forms, improved user input for phone number

--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -31,10 +31,21 @@
             android:text="Product price:"
             android:textAppearance="?android:textAppearanceMedium"/>
 
-        <EditText
-            android:id="@+id/edit_product_price"
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="€"
+                android:textAppearance="?android:textAppearanceMedium" />
+            <EditText
+                android:id="@+id/edit_product_price"
+                android:inputType="number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
 
         <TextView
             android:layout_width="wrap_content"
@@ -52,6 +63,7 @@
                 android:text="-" />
             <EditText
                 android:id="@+id/edit_product_quantity"
+                android:inputType="number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <Button
@@ -80,6 +92,8 @@
 
         <EditText
             android:id="@+id/edit_supplier_phone"
+            android:inputType="phone"
+            android:digits="0123456789+ -"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
